--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,27 @@
+@import './resets';
+@import './variables';
+
+@function weight($weight-name) {
+    @return map-get($font-weights, $weight-name);
+}
+
 body {
-    background: blue;
+    background: $primary-color;
+    color: $text-color;
+
+}
+
+.main {
+    width: 80%;
+    margin: 0 auto;
+
+    #{&}__paragraph {
+        font-weight: weight(bold);
+
+        &:hover {
+            color: pink;
+        }
+    }
+
+
 }
